# afvs-hybrid-retrieval-thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: advisor_correction.yml  experiment.yml  literature_review.yml  problem_statement.yml  writing_section.yml
.github/workflows/: docs_check.yml  lint.yml  tests.yml
docs/: 01_problem_statement.md  02_research_questions.md  08_conclusions.md
experiments/: exp_001_static_baselines.yml  exp_002_filter_selectivity.yml  exp_003_adaptive_policy.yml  exp_004_error_analysis.yml  registry.md
references/: search_strategy.md
